Работа над добавлением текстур часть 1

--- a/Vengine/Vengine.vcxproj
+++ b/Vengine/Vengine.vcxproj
@@ -93,7 +93,8 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>D:\Programms\Vulkan\1.2.154.1\Include;D:\Programms\GLFW\glfw-3.3.2.bin.WIN64\include;D:\Programms\GLM\GLM-0.9.9.8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Programms\Vulkan\1.2.154.1\Include;D:\Programms\GLFW\glfw-3.3.2.bin.WIN64\include;D:\Programms\GLM\GLM-0.9.9.8;D:\Programms\STB\stb-master;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -111,8 +112,9 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\Programms\Vulkan\1.2.154.1\Include;D:\Programms\GLFW\glfw-3.3.2.bin.WIN64\include;D:\Programms\GLM\GLM-0.9.9.8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Programms\Vulkan\1.2.154.1\Include;D:\Programms\GLFW\glfw-3.3.2.bin.WIN64\include;D:\Programms\GLM\GLM-0.9.9.8;D:\Programms\STB\stb-master;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -129,8 +131,9 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\Programms\Vulkan\1.2.154.1\Include;D:\Programms\GLFW\glfw-3.3.2.bin.WIN64\include;D:\Programms\GLM\GLM-0.9.9.8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Programms\Vulkan\1.2.154.1\Include;D:\Programms\GLFW\glfw-3.3.2.bin.WIN64\include;D:\Programms\GLM\GLM-0.9.9.8;D:\Programms\STB\stb-master;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -148,8 +151,9 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\Programms\Vulkan\1.2.154.1\Include;D:\Programms\GLFW\glfw-3.3.2.bin.WIN64\include;D:\Programms\GLM\GLM-0.9.9.8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Programms\Vulkan\1.2.154.1\Include;D:\Programms\GLFW\glfw-3.3.2.bin.WIN64\include;D:\Programms\GLM\GLM-0.9.9.8;D:\Programms\STB\stb-master;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -168,6 +172,7 @@
     <None Include="shaders\shader.vert" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="vulkanWrapper\commandBuffer.cpp" />
     <ClCompile Include="vulkanWrapper\buffer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="vulkanWrapper\Vertex.cpp" />
@@ -182,6 +187,7 @@
     <ClCompile Include="vulkanWrapper\vulkanWrapper.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="vulkanWrapper\commandBuffer.h" />
     <ClInclude Include="vulkanWrapper\buffer.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="vulkanWrapper\Vertex.h" />
@@ -193,6 +199,9 @@
     <ClInclude Include="vulkanWrapper\setupValidationLayers.h" />
     <ClInclude Include="vkSettings.h" />
     <ClInclude Include="vulkanWrapper\vulkanWrapper.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="textures\texture.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
