--- a/Vengine/Vengine.vcxproj.filters
+++ b/Vengine/Vengine.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClCompile Include="vulkanWrapper\commandBuffer.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="vulkanWrapper\image.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
@@ -113,6 +116,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="vulkanWrapper\commandBuffer.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="vulkanWrapper\image.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
