Добавленна возможность рисовать OBJ модели и накладывать на них текстуры

--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/Vengine/textures/Car Texture.png
+/Vengine/textures/viking_room.png
