--- a/Vengine/Vengine.vcxproj
+++ b/Vengine/Vengine.vcxproj
@@ -177,15 +177,25 @@
     <ClCompile Include="graphics\vkTools.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\buffer.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\commandBuffer.cpp" />
-    <ClCompile Include="graphics\vulkanWrapper\extensionsCheck.cpp" />
+    <ClCompile Include="graphics\vulkanWrapper\descriptorSetLayout.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\image.cpp" />
+    <ClCompile Include="graphics\vulkanWrapper\instance.cpp" />
+    <ClCompile Include="graphics\vulkanWrapper\pipeline.cpp" />
+    <ClCompile Include="graphics\vulkanWrapper\pipelineLayout.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\queueFamilyIndices.cpp" />
-    <ClCompile Include="graphics\vulkanWrapper\setupDevices.cpp" />
-    <ClCompile Include="graphics\vulkanWrapper\setupSwapchain.cpp" />
-    <ClCompile Include="graphics\vulkanWrapper\setupValidationLayers.cpp" />
+    <ClCompile Include="graphics\vulkanWrapper\device.cpp" />
+    <ClCompile Include="graphics\vulkanWrapper\swapChain.cpp" />
+    <ClCompile Include="graphics\vulkanWrapper\validationLayers.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\Vertex.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\vulkanWrapper.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="graphics\Model.cpp" />
+    <ClCompile Include="graphics\Mesh.cpp" />
+    <ClCompile Include="graphics\Texture.cpp" />
+    <ClCompile Include="graphics\Pixel.cpp" />
+    <ClCompile Include="graphics\vulkanWrapper\setupRenderPass.cpp" />
+    <ClCompile Include="graphics\Shader.cpp" />
+    <ClCompile Include="graphics\vulkanWrapper\shaderModule.cpp" />
     <ClCompile Include="vulkanWrapper\buffer.cpp" />
     <ClCompile Include="vulkanWrapper\commandBuffer.cpp" />
     <ClCompile Include="vulkanWrapper\extensionsCheck.cpp" />
@@ -201,19 +211,31 @@
     <Image Include="textures\texture.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="graphics\libraries\stb_image.h" />
+    <ClInclude Include="graphics\libraries\tiny_obj_loader.h" />
     <ClInclude Include="graphics\Renderer.h" />
     <ClInclude Include="graphics\vkSettings.h" />
     <ClInclude Include="graphics\vkTools.h" />
     <ClInclude Include="graphics\vulkanWrapper\buffer.h" />
     <ClInclude Include="graphics\vulkanWrapper\commandBuffer.h" />
-    <ClInclude Include="graphics\vulkanWrapper\extensionsCheck.h" />
+    <ClInclude Include="graphics\vulkanWrapper\descriptorSetLayout.h" />
     <ClInclude Include="graphics\vulkanWrapper\image.h" />
+    <ClInclude Include="graphics\vulkanWrapper\instance.h" />
+    <ClInclude Include="graphics\vulkanWrapper\pipeline.h" />
+    <ClInclude Include="graphics\vulkanWrapper\pipelineLayout.h" />
     <ClInclude Include="graphics\vulkanWrapper\queueFamilyIndices.h" />
-    <ClInclude Include="graphics\vulkanWrapper\setupDevices.h" />
-    <ClInclude Include="graphics\vulkanWrapper\setupSwapchain.h" />
-    <ClInclude Include="graphics\vulkanWrapper\setupValidationLayers.h" />
+    <ClInclude Include="graphics\vulkanWrapper\device.h" />
+    <ClInclude Include="graphics\vulkanWrapper\validationLayers.h" />
+    <ClInclude Include="graphics\vulkanWrapper\swapChain.h" />
     <ClInclude Include="graphics\vulkanWrapper\Vertex.h" />
     <ClInclude Include="graphics\vulkanWrapper\vulkanWrapper.h" />
+    <ClInclude Include="graphics\Model.h" />
+    <ClInclude Include="graphics\Mesh.h" />
+    <ClInclude Include="graphics\Texture.h" />
+    <ClInclude Include="graphics\Pixel.h" />
+    <ClInclude Include="graphics\vulkanWrapper\setupRenderPass.h" />
+    <ClInclude Include="graphics\Shader.h" />
+    <ClInclude Include="graphics\vulkanWrapper\shaderModule.h" />
     <ClInclude Include="vulkanWrapper\buffer.h" />
     <ClInclude Include="vulkanWrapper\commandBuffer.h" />
     <ClInclude Include="vulkanWrapper\extensionsCheck.h" />
